tests/fixtures/invalid/expr_inesperada.syn
#lang: es

funcion f() -> nulo:
    +
